<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:background="@color/colorPrimary" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@android:color/white" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="15"
            android:text="@string/sign_up"
            android:textColor="@android:color/white"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:text="@string/text_sign"
            android:textAppearance="@android:style/TextAppearance.Holo.Large"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            android:textStyle="italic|normal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.v7.widget.CardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                app:cardCornerRadius="20dp"
                app:cardElevation="10dp">

                <com.balysv.materialripple.MaterialRippleLayout
                    style="@style/material_ripple"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <Button
                        android:id="@+id/twitter_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/twitter"
                        android:drawableLeft="@drawable/ic_twitter"
                        android:gravity="center"
                        android:padding="16dp"
                        android:text="@string/twitter"
                        android:textColor="@android:color/white"
                        android:textStyle="italic|normal" />

                </com.balysv.materialripple.MaterialRippleLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                app:cardCornerRadius="20dp"
                app:cardElevation="0dp">

                <com.balysv.materialripple.MaterialRippleLayout
                    style="@style/material_ripple"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <Button
                        android:id="@+id/facebook_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/facebook"
                        android:drawableLeft="@drawable/ic_facebook"
                        android:gravity="center"
                        android:padding="16dp"
                        android:text="@string/facebook"
                        android:textColor="@android:color/white"
                        android:textStyle="italic|normal" />

                </com.balysv.materialripple.MaterialRippleLayout>

            </android.support.v7.widget.CardView>


        </LinearLayout>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:layout_weight="1"
            app:cardCornerRadius="20dp"
            app:cardElevation="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/name"
                    android:textColor="@color/colorPrimary"
                    android:textSize="20sp"
                    android:textStyle="bold|italic" />

                <EditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/button_background"
                    android:hint="@string/name_text"
                    android:padding="5dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:textColor="@color/colorPrimary"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/email"
                    android:textColor="@color/colorPrimary"
                    android:textSize="20sp"
                    android:textStyle="bold|italic" />

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/button_background"
                    android:hint="@string/email_text"
                    android:padding="5dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:textColor="@color/colorPrimary"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/password"
                    android:textColor="@color/colorPrimary"
                    android:textSize="20sp"
                    android:textStyle="bold|italic" />
                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_background"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:padding="5dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:textColor="@color/colorPrimary"
                    android:textSize="20sp"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    android:drawableEnd="@drawable/ic_visibility_off"
                    android:layout_marginBottom="5dp"/>
                <!--<RelativeLayout-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_marginLeft="10dp"-->
                    <!--android:layout_marginRight="10dp"-->
                    <!--android:layout_marginBottom="5dp">-->

                    <!--<EditText-->
                        <!--android:id="@+id/password"-->
                        <!--android:layout_width="match_parent"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:background="@drawable/button_background"-->
                        <!--android:hint="@string/password"-->
                        <!--android:inputType="textPassword"-->
                        <!--android:padding="5dp"-->
                        <!--android:paddingLeft="10dp"-->
                        <!--android:paddingRight="10dp"-->
                        <!--android:textColor="@color/colorPrimary"-->
                        <!--android:textSize="20sp" />-->

                    <!--<ImageButton-->
                        <!--android:id="@+id/visibility"-->
                        <!--android:layout_width="wrap_content"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:layout_alignParentEnd="true"-->
                        <!--android:layout_centerInParent="true"-->
                        <!--android:layout_centerHorizontal="true"-->
                        <!--android:layout_marginRight="10dp"-->
                        <!--android:background="@android:color/white"-->
                        <!--android:onClick="visibility"-->
                        <!--android:src="@drawable/ic_visibility_off" />-->
                <!--</RelativeLayout>-->


                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="10dp">

                    <com.balysv.materialripple.MaterialRippleLayout
                        style="@style/material_ripple2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <Button
                            android:id="@+id/register_button"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/button_background"
                            android:onClick="registerPerson"
                            android:text="@string/register"
                            android:textColor="@color/colorPrimary" />

                    </com.balysv.materialripple.MaterialRippleLayout>
                </android.support.v7.widget.CardView>


            </LinearLayout>

        </android.support.v7.widget.CardView>

        <TextView
            android:id="@+id/sign_in_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:onClick="onClickSignIn"
            android:shadowColor="@android:color/darker_gray"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="15"
            android:text="@string/sign_in"
            android:textColor="@color/colorPrimary"
            android:textSize="25sp"
            android:textStyle="bold|italic|normal" />
    </LinearLayout>

</RelativeLayout>